# mini_shell

./: .historyCommande.txt  .historyCommandeZSH.txt  CMakeLists.txt  GRFShell  GRFShellBackUp  HLib.h  README.md  main.c  test  test2  test3
mylib/: mycd.c  mycd.h  mycls.c  mycls.h  mydate.c  mydate.h  myecho.c  myecho.h  myexitctrlc.c  myexitctrlc.h  mygetpid++.c  mygetpid++.h  mygetpid.c  mygetpid.h  mygetpidPereFils.c  mygetpidPereFils.h  mygetppid.c  mygetppid.h  mygetuid.c  mygetuid.h  myhelp.c  myhelp.h  myhistory.c  myhistory.h  myls.c  myls.h  mymd.c  mymd.h  mymkdir.c  mymkdir.h  myothercommand.c  myothercommand.h  mypathHistory.c  mypathHistory.h  mypwd.c  mypwd.h  myrename.c  myrename.h  myrmdir.c  myrmdir.h  (+6 more)
